--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.3"
   }
 }
