--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.10",
+    "nodemon": "^3.0.3",
+    "randomstring": "^1.3.0"
   }
 }
