--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.9.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@coreui/coreui": "^4.3.2",
     "@coreui/react": "^4.11.1",
     "@reduxjs/toolkit": "^2.2.1",
@@ -18,14 +19,14 @@
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object":"^7.21.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.9"
   }
 }
