--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@coreui/coreui": "^4.3.2",
     "@coreui/react": "^4.11.1",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-google-recaptcha": "^2.1.9"
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-twitter-auth": "^0.0.6"
   }
 }
