--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@apollo/client": "^3.9.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
-    "@coreui/coreui": "^4.3.2",
-    "@coreui/react": "^4.11.1",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.0.1",
